--- a/apps/docs/content/guides/forms.mdx
+++ b/apps/docs/content/guides/forms.mdx
@@ -105,7 +105,8 @@ description: Представления с набором полей для по
 Для открытия представления используйте метод [Открытие представления](POST /views/open).
 
 <Warning>
-С целью поддержания интерактивности и отзывчивости интерфейсов Пачки, срок жизни `trigger_id` ограничен и составляет **3 секунды**
+  С целью поддержания интерактивности и отзывчивости интерфейсов Пачки, срок жизни `trigger_id`
+  ограничен и составляет **3 секунды**
 </Warning>
 
 ## Получение результатов
@@ -120,10 +121,13 @@ description: Представления с набором полей для по
 
 Каждый исходящий вебхук защищён с помощью подписи, основанной на хешировании содержимого. Подробнее об этом, а также о других методах проверки подлинности исходящего вебхука, вы можете прочитать в блоке Безопасность.
 
-<SchemaBlock name="ViewSubmitWebhookPayload" title="Структура исходящего вебхука о заполнении формы" />
+<SchemaBlock
+  name="ViewSubmitWebhookPayload"
+  title="Структура исходящего вебхука о заполнении формы"
+/>
 
 <CodeBlock language="json" title="Пример вебхука о заполнении формы">
-{`{
+  {`{
   "type": "view",
   "event": "submit",
   "private_metadata": "{'timeoff_id':4378}",
@@ -147,9 +151,7 @@ description: Представления с набором полей для по
 }`}
 </CodeBlock>
 
-<Warning>
-Срок жизни прямых ссылкок на скачивание файлов ограничен и составляет **1 час**
-</Warning>
+<Warning>Срок жизни прямых ссылкок на скачивание файлов ограничен и составляет **1 час**</Warning>
 
 ## Закрытие и отображение ошибок
 
@@ -158,7 +160,8 @@ description: Представления с набором полей для по
 Вам необходимо оперативно ответить на вебхук (кодом `200` или `400` со списком ошибок). В ином случае, пользователь получит ошибку отправки в интерфейсе Пачки. Все значения полей будут сохранены и **пользователь повторит попытку отправки формы**.
 
 <Warning>
-С целью поддержания интерактивности и отзывчивости интерфейсов Пачки, время на ответ ограничего. Ваше приложение должно дать ответ на вебхук в течение **3 секунд**.
+  С целью поддержания интерактивности и отзывчивости интерфейсов Пачки, время на ответ ограничего.
+  Ваше приложение должно дать ответ на вебхук в течение **3 секунд**.
 </Warning>
 
 ### Закрытие представления
@@ -166,7 +169,7 @@ description: Представления с набором полей для по
 Если вы хотите просто закрыть пользователю представление (нет необходимости отображать ошибки), то ответ должен быть `HTTP 200 OK`. Никакое тело ответа не требуется.
 
 <CodeBlock language="http" title="Пример ответа на вебхук для закрытия представления">
-{`HTTP/1.1 200 OK
+  {`HTTP/1.1 200 OK
 Server: nginx/1.14.2
 Date: Wed, 22 Apr 2025 12:32:29 GMT
 Content-Type: text/plain; charset=utf-8`}
@@ -176,7 +179,10 @@ Content-Type: text/plain; charset=utf-8`}
 
 Если вы хотите отобразить пользователю ошибки заполнения конкретных полей представления, то ответ должен быть `HTTP 400 Bad Request`, а тело ответа содержать массив полей с указанием текста ошибки.
 
-<SchemaBlock name="ViewErrorsResponse" title="Тело ответа с указанием текста ошибки для каждого поля" />
+<SchemaBlock
+  name="ViewErrorsResponse"
+  title="Тело ответа с указанием текста ошибки для каждого поля"
+/>
 
 <CodeBlock language="http" title="Пример ответа на вебхук для отображения ошибок">
 {`HTTP/1.1 400 Bad Request
@@ -193,6 +199,7 @@ Vary: Origin
 X-Rack-CORS: miss; no-origin
 
 {"errors":{"date_end":"Дата окончания отпуска не может быть меньше даты начала","request_doc":"В заявлении не найдена электронная подпись"}}`}
+
 </CodeBlock>
 
 <Image src="/images/forms/errors.png" alt="Пример отображения ошибок в интерфейсе представления" />
