--- a/apps/docs/content/guides/audit-events.mdx
+++ b/apps/docs/content/guides/audit-events.mdx
@@ -18,12 +18,14 @@ description: Отслеживание событий безопасности
 ### События аутентификации
 
 - `user_login` - пользователь успешно вошел в систему
+- `user_logout` - пользователь вышел из системы
 
 ### События управления пользователями
 
 - `user_created` - создана новая учетная запись пользователя
 - `user_deleted` - учетная запись пользователя удалена
 - `user_role_changed` - роль пользователя была изменена
+- `user_updated` - данные пользователя обновлены
 
 ### События управления тегами
 
@@ -42,8 +44,9 @@ description: Отслеживание событий безопасности
 - `tag_added_to_chat` - тег добавлен в чат
 - `tag_removed_from_chat` - тег удален из чата
 
-### События управления сообщениями
+### События сообщений
 
+- `message_updated` - сообщение отредактировано
 - `message_deleted` - сообщение удалено
 
 ### События безопасности
