feat: SEO, security headers, feeds, and dead code cleanup
- Add structured data (JSON-LD), canonical URLs, and OpenGraph metadata
- Add security headers (HSTS, X-Frame-Options, CSP, etc.) via next.config
- Add sitemap.xml, feed.xml, openapi.yaml, and security.txt routes
- Add rate limiting and input validation to search API
- Add skip-to-content link for accessibility
- Update robots.txt with disallow rules and caching
- Make llms.txt and llms-full.txt statically generated with CORS
- Update favicon to SVG + ICO + apple-touch-icon
- Remove unused files: watcher.ts, home-cards.tsx, sidebar-footer.tsx
- Redact hardcoded token in docs example

--- a/apps/docs/content/guides/requests-responses.mdx
+++ b/apps/docs/content/guides/requests-responses.mdx
@@ -21,7 +21,7 @@ description: Формат запросов, авторизация, пагина
 
 <CodeBlock language="http" title="Пример запроса">
 {`POST /users HTTP/1.1
-Authorization: Bearer Pm7gdycNeHV_F1y4_tjWWIutC0Aq0gwl9wRnX-KBuHw
+Authorization: Bearer YOUR_ACCESS_TOKEN
 Content-Type: application/json; charset=utf-8
 Host: api.pachca.com
 Connection: close
