feat: unify method badges and add endpoint links with badges
- Match method badge style (rounded-full, 10px) across all pages to sidebar
- Add EndpointLink component for inline method links with colored badges
- Override badge colors inside callout blocks to match callout theme
- Preserve HTTP method info in schema description links for badge rendering
- Fix double-processing of endpoint descriptions in method template

--- a/apps/docs/content/guides/forms.mdx
+++ b/apps/docs/content/guides/forms.mdx
@@ -200,7 +200,12 @@ X-Runtime: 0.117503
 Vary: Origin
 X-Rack-CORS: miss; no-origin
 
-{"errors":{"date_end":"Дата окончания отпуска не может быть меньше даты начала","request_doc":"В заявлении не найдена электронная подпись"}}`}
+{
+    "errors": {
+        "date_end": "Дата окончания отпуска не может быть меньше даты начала",
+        "request_doc": "В заявлении не найдена электронная подпись"
+    }
+}`}
 
 </CodeBlock>
 
