--- a/apps/docs/content/home.mdx
+++ b/apps/docs/content/home.mdx
@@ -36,7 +36,7 @@ _Также вы можете получить markdown-версию любой 
 <Warning>
   Входящий вебхук не дает возможности отправить личное сообщение или в указанный чат. Сообщение
   будет отправлено во все групповые чаты, где состоит бот. Чтобы отправить личное сообщение или
-  указать конкретный чат - воспользуйтесь API методом [Новое сообщение](/messages/create).
+  указать конкретный чат - воспользуйтесь API методом [Новое сообщение](POST /messages).
 </Warning>
 
 <Info>
@@ -72,13 +72,13 @@ _Также вы можете получить markdown-версию любой 
 
 Список уникальных методов API:
 
-- [Новый сотрудник](/users/create)
-- [Редактирование сотрудника](/users/update)
-- [Удаление сотрудника](/users/delete)
-- [Новый тег](/group-tags/create)
-- [Редактирование тега](/group-tags/update)
-- [Удаление тега](/group-tags/delete)
-- [Удаление сообщения](/messages/delete)
+- [Новый сотрудник](POST /users)
+- [Редактирование сотрудника](PUT /users/{id})
+- [Удаление сотрудника](DELETE /users/{id})
+- [Новый тег](POST /group_tags)
+- [Редактирование тега](PUT /group_tags/{id})
+- [Удаление тега](DELETE /group_tags/{id})
+- [Удаление сообщения](DELETE /messages/{id})
 
 <Info>
   Получить access_token для работы с API вы можете в интерфейсе продукта, в разделе «Автоматизации»
