feat: smooth TOC indicator animation, refine boxed panels and response cards
- Replace per-item border indicator in TOC with a single animated element using GSAP
- Simplify boxed panel headers and variant section styling
- Adjust response description card padding
- Wrap forms info block in callout
- Crop dlp-page screenshot

--- a/apps/docs/content/guides/forms.mdx
+++ b/apps/docs/content/guides/forms.mdx
@@ -7,7 +7,7 @@ description: Представления с набором полей для по
 
 Формы в Пачке позволяют вам отображать пользователям представления с указанным вами набором полей. Представления отображаются в виде модального окна, а результат заполнения формы вы можетет получить на свой сервер.
 
-На текущий момент вызов модального окна с представлением возможен только через кнопки в сообщении бота.
+<Info>На текущий момент вызов модального окна с представлением возможен только через кнопки в сообщении бота.</Info>
 
 ## Модальное окно
 
