feat: improve link labels, rename middleware to proxy, minor fixes
- Replace raw URLs with descriptive link text in home and webhook guides
- Add external link icon for outbound links in smooth-scroll-link
- Rename middleware.ts to proxy.ts (Next.js deprecation)
- Rename "Комментарии" to "Треды" in navigation
- Fix thread chat_id doc link to correct endpoint
- Move path escaping inside mdx-only branch in resolve-links

--- a/apps/docs/content/guides/webhook.mdx
+++ b/apps/docs/content/guides/webhook.mdx
@@ -19,7 +19,7 @@ description: Получение уведомлений о событиях в р
 
 <Info>
   О том, как создать бота и добавить его в чаты, вы можете прочитать в статье
-  [https://www.pachca.com/articles/webhook](https://www.pachca.com/articles/webhook)
+  [Чат-боты через Webhook/API](https://www.pachca.com/articles/webhook)
 </Info>
 
 ## Новые сообщения
@@ -40,7 +40,7 @@ description: Получение уведомлений о событиях в р
 
 Данный вебхук отправляется при нажатии `Data-кнопки` в сообщении от бота. После получения этого вебхука вы можете воспользоваться методом [Редактирование сообщения](PUT /messages/{id}) и изменить/удалить кнопки у сообщения или отправить [Новое сообщение](POST /messages) как реакцию пользователю.
 
-Подробнее о работе с кнопками в ботах вы можете прочитать в статье [https://www.pachca.com/articles/knopki-v-chat-botah](https://www.pachca.com/articles/knopki-v-chat-botah)
+Подробнее о работе с кнопками в ботах вы можете прочитать в статье [Кнопки в чат-ботах](https://www.pachca.com/articles/knopki-v-chat-botah)
 
 <SchemaBlock name="ButtonWebhookPayload" />
 
