--- a/apps/docs/content/home.mdx
+++ b/apps/docs/content/home.mdx
@@ -24,7 +24,7 @@ _Также вы можете получить markdown-версию любой 
 
 <Info>
   О том, как создать бота, добавить его в чаты и получить `access_token`, вы можете прочитать в
-  статье [https://www.pachca.com/articles/webhook](https://www.pachca.com/articles/webhook)
+  статье [Чат-боты через Webhook/API](https://www.pachca.com/articles/webhook)
 </Info>
 
 ## Webhook
@@ -41,7 +41,7 @@ _Также вы можете получить markdown-версию любой 
 
 <Info>
   Подробнее о работе с шаблонизаторами вы можете прочитать в статье
-  [https://www.pachca.com/articles/kak-pravilno-zapolnit-shablon-webhook](https://www.pachca.com/articles/kak-pravilno-zapolnit-shablon-webhook)
+  [Как правильно заполнить шаблон Webhook](https://www.pachca.com/articles/kak-pravilno-zapolnit-shablon-webhook)
 </Info>
 
 ### Исходящий Webhook
@@ -50,7 +50,7 @@ _Также вы можете получить markdown-версию любой 
 
 Вы можете как получать события о всех новых сообщениях, так и только тех, которые начинаются с указанных команд.
 
-<Info>Подробнее об исходящих вебхуках вы можете прочитать по [ссылке](/guides/webhook)</Info>
+<Info>Подробнее об исходящих вебхуках вы можете прочитать в разделе [Исходящий Webhook](/guides/webhook)</Info>
 
 ## API
 
@@ -91,7 +91,7 @@ _Также вы можете получить markdown-версию любой 
 
 Дополнительно, на любом тарифе можно получить сообщения доступных чатов через метод [Список сообщений чата](/messages/list).
 
-<Info>Документация по работе с экспортом сообщений доступа по [ссылке](/guides/export)</Info>
+<Info>Документация по работе с экспортом сообщений доступна в разделе [Экспорт сообщений](/guides/export)</Info>
 
 ## Unfurl
 
@@ -99,10 +99,10 @@ _Также вы можете получить markdown-версию любой 
 
 <Info>
   Подробнее о разворачивании ссылок вы можете прочитать в статье
-  [https://www.pachca.com/articles/unfurling-ssylok-v-pachce](https://www.pachca.com/articles/unfurling-ssylok-v-pachce)
+  [Unfurling ссылок в Пачке](https://www.pachca.com/articles/unfurling-ssylok-v-pachce)
 </Info>
 
 <Info>
-  Документация по работе с методом разворачивания ссылок доступа по
-  [ссылке](/link-previews/add-link-previews)
+  Документация по работе с методом разворачивания ссылок доступна в разделе
+  [Unfurl (разворачивание ссылок)](/link-previews/add-link-previews)
 </Info>
