feat: document thread support for POST /chats/{id}/members

--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -9,6 +9,12 @@ useUpdatesComponent: true
 
 Новые методы в API и дополнения в уже существующих
 
+<!-- update:2026-02-12 -->
+
+## Добавление участников в тред
+
+Метод [Добавление пользователей](POST /chats/{id}/members) теперь поддерживает работу с тредами. Вы можете передать `chat_id` треда в качестве идентификатора чата, чтобы добавить участников в тред.
+
 <!-- update:2026-02-09 -->
 
 ## Управление напоминаниями
