refactor: use new callout types in MDX content
Replace generic <Info>/<Warning> with more specific callout types:
- home.mdx: tips for AI formats and access token, notes for reference links
- forms.mdx: danger for critical 3-second time limits, note for remarks
- webhook.mdx: tip for getting started advice

--- a/apps/docs/content/guides/webhook.mdx
+++ b/apps/docs/content/guides/webhook.mdx
@@ -17,10 +17,10 @@ description: Получение уведомлений о событиях в р
 
 Большинство типов событий потребуют добавления бота в чаты. Именно по этим чатам и по отправленным ботом сообщениям вы будете получать события. Есть глобальные события (например, Изменение состава участников пространства), которые не требуют добавления бота в чат.
 
-<Info>
+<Tip>
   О том, как создать бота и добавить его в чаты, вы можете прочитать в статье
   [Чат-боты через Webhook/API](https://www.pachca.com/articles/webhook)
-</Info>
+</Tip>
 
 ## Новые сообщения
 
