refactor: remove note callout type, replace with info

--- a/apps/docs/content/home.mdx
+++ b/apps/docs/content/home.mdx
@@ -39,10 +39,10 @@ _Также вы можете получить markdown-версию любой 
   указать конкретный чат - воспользуйтесь API методом [Новое сообщение](POST /messages).
 </Warning>
 
-<Note>
+<Info>
   Подробнее о работе с шаблонизаторами вы можете прочитать в статье
   [Как правильно заполнить шаблон Webhook](https://www.pachca.com/articles/kak-pravilno-zapolnit-shablon-webhook)
-</Note>
+</Info>
 
 ### Исходящий Webhook
 
@@ -50,21 +50,21 @@ _Также вы можете получить markdown-версию любой 
 
 Вы можете как получать события о всех новых сообщениях, так и только тех, которые начинаются с указанных команд.
 
-<Note>Подробнее об исходящих вебхуках вы можете прочитать в разделе [Исходящий Webhook](/guides/webhook)</Note>
+<Info>Подробнее об исходящих вебхуках вы можете прочитать в разделе [Исходящий Webhook](/guides/webhook)</Info>
 
 ## API
 
 Каждый созданный бот имеет свой уникальный токен для работы с API. Если вам нужно создавать чаты, управлять составом участников чатов, отправлять сообщения в указанные чаты и создавать интерактивное взаимодействие пользователя с ботом - вам необходимо использовать API.
 
-<Note>
+<Info>
   Всю документацию по доступным методам и правилам работы с API вы можете найти в меню слева
-</Note>
+</Info>
 
 ## Формы
 
 Формы в Пачке позволяют вам отображать пользователям представления с указанным вами набором полей. Представления отображаются в виде модального окна, а результат заполнения формы вы можете получить на свой сервер. Модальное окно может быть вызвано, например, через кнопки в сообщении бота.
 
-<Note>Подробнее о работе с формами вы можете прочитать в разделе [Формы](/guides/forms)</Note>
+<Info>Подробнее о работе с формами вы можете прочитать в разделе [Формы](/guides/forms)</Info>
 
 ## Администрирование
 
@@ -91,18 +91,18 @@ _Также вы можете получить markdown-версию любой 
 
 Дополнительно, на любом тарифе можно получить сообщения доступных чатов через метод [Список сообщений чата](/messages/list).
 
-<Note>Документация по работе с экспортом сообщений доступна в разделе [Экспорт сообщений](/guides/export)</Note>
+<Info>Документация по работе с экспортом сообщений доступна в разделе [Экспорт сообщений](/guides/export)</Info>
 
 ## Unfurl
 
 Дополнительным исходящим вебхуком является возможность отслеживать отправленные пользователями ссылки и дополнять их своими данными, полученными из других систем.
 
-<Note>
+<Info>
   Подробнее о разворачивании ссылок вы можете прочитать в статье
   [Unfurling ссылок в Пачке](https://www.pachca.com/articles/unfurling-ssylok-v-pachce)
-</Note>
+</Info>
 
-<Note>
+<Info>
   Документация по работе с методом разворачивания ссылок доступна в разделе
   [Unfurl (разворачивание ссылок)](/link-previews/add-link-previews)
-</Note>
+</Info>
