refactor: add Steps component, update callouts and content
- Add Steps/Step MDX components with auto-numbered styling
- Remove Tip callout type, replace with Info in content
- Register new MDX components (Steps, Cards) in renderer
- Improve ToC smooth scroll with native event delegation
- Update export and webhook guides to use Steps layout

--- a/apps/docs/content/guides/webhook.mdx
+++ b/apps/docs/content/guides/webhook.mdx
@@ -17,10 +17,10 @@ description: Получение уведомлений о событиях в р
 
 Большинство типов событий потребуют добавления бота в чаты. Именно по этим чатам и по отправленным ботом сообщениям вы будете получать события. Есть глобальные события (например, Изменение состава участников пространства), которые не требуют добавления бота в чат.
 
-<Tip>
+<Info>
   О том, как создать бота и добавить его в чаты, вы можете прочитать в статье
   [Чат-боты через Webhook/API](https://www.pachca.com/articles/webhook)
-</Tip>
+</Info>
 
 ## Новые сообщения
 
@@ -88,18 +88,23 @@ content-length: 358
 
 </CodeBlock>
 
-Для проверки подписи необходимо вычислить её самостоятельно, используя секрет вебхука `Signing secret`, который доступен в настройках бота во вкладке «Исходящий webhook». Рекомендуется использовать сырой (raw) контент тела запроса для вычисления хеша, так как при JSON-парсинге содержимое может быть изменено.
+<Steps>
+  <Step title="Проверьте подпись">
+    Для проверки подписи необходимо вычислить её самостоятельно, используя секрет вебхука `Signing secret`, который доступен в настройках бота во вкладке «Исходящий webhook». Рекомендуется использовать сырой (raw) контент тела запроса для вычисления хеша, так как при JSON-парсинге содержимое может быть изменено.
 
-<CodeBlock language="javascript" title="Вычисление и сравнение подписи">
-{`// WEBHOOK_SECRET - значение поля Signing secret во вкладке «Исходящий webhook» в настройках бота
+    <CodeBlock language="javascript" title="Вычисление и сравнение подписи">
+    {`// WEBHOOK_SECRET - значение поля Signing secret во вкладке «Исходящий webhook» в настройках бота
 
 const signature = crypto.createHmac("sha256", WEBHOOK_SECRET).update(rawBody).digest("hex");
 if (signature !== request.headers['pachca-signature']) {
     throw "Invalid signature"
 }`}
+    </CodeBlock>
+  </Step>
 
-</CodeBlock>
+  <Step title="Валидируйте IP-адрес отправителя">
+    Кроме проверки подписи, также рекомендуется валидировать IP-адреса отправителя.
 
-Кроме проверки подписи, также рекомендуется валидировать IP-адреса отправителя.
-
-IP-адрес Пачки: `37.200.70.177`
+    IP-адрес Пачки: `37.200.70.177`
+  </Step>
+</Steps>
