--- a/apps/docs/content/guides/export.mdx
+++ b/apps/docs/content/guides/export.mdx
@@ -15,47 +15,51 @@ description: Экспорт данных пространства
 
 На основе выгрузки можно замерять количество сообщений и реакций в общих чатах. Так можно рассчитать Engagment Rate и улучшать корп. культуру/коммуникацию среди сотрудников. Ещё можно подсчитывать количество активных чатов и смотреть, насколько много в компании ведется обсуждений.
 
-## Запрос экспорта
+## Как это работает
 
-При запросе экспорта можно настроить период, за который вы хотите получить данные, но не более 45 дней. И можете добавить ID-чатов, из которых вы хотите получить экспорт. Если вам нужны данные за период дольше 45 дней, то по завершении одной выгрузки, можно запросить следующую с новым диапазоном дат.
+<Steps>
+  <Step title="Запросите экспорт">
+    При запросе экспорта можно настроить период, за который вы хотите получить данные, но не более 45 дней. И можете добавить ID-чатов, из которых вы хотите получить экспорт. Если вам нужны данные за период дольше 45 дней, то по завершении одной выгрузки, можно запросить следующую с новым диапазоном дат.
 
-При запросе экспорта важно учитывать следующие ограничения:
+    При запросе экспорта важно учитывать следующие ограничения:
 
-- выгружаются все чаты, в том числе архивные и личные без контента сообщений
-- не выгружаются треды в личных сообщениях
-- не учитываются вложения
-- не отражаются пересланные сообщения
-- максимальный период одной выгрузки: 45 дней (при запросе с указанием конкретных чатов - 366 дней)
-- максимальный количество запрашиваемых чатов (при указании): 50
-- новый запрос на экспорта вы сможете сделать после завершения текущего
+    - выгружаются все чаты, в том числе архивные и личные без контента сообщений
+    - не выгружаются треды в личных сообщениях
+    - не учитываются вложения
+    - не отражаются пересланные сообщения
+    - максимальный период одной выгрузки: 45 дней (при запросе с указанием конкретных чатов - 366 дней)
+    - максимальный количество запрашиваемых чатов (при указании): 50
+    - новый запрос на экспорта вы сможете сделать после завершения текущего
 
-Для запроса экспорта используйте метод [Экспорт сообщений](POST /chats/exports).
+    Для запроса экспорта используйте метод [Экспорт сообщений](POST /chats/exports).
 
-Экспорт выполняется асинхронно. На указанный `webhook_url` будет отправлен `JSON` с информацией о готовом экспорте.
+    Экспорт выполняется асинхронно. На указанный `webhook_url` будет отправлен `JSON` с информацией о готовом экспорте.
 
-<CodeBlock language="json" title="Пример JSON вебхука об успешном завершении экспорта">
-  {`{
+    <CodeBlock language="json" title="Пример JSON вебхука об успешном завершении экспорта">
+    {`{
     "type": "export",
     "event": "ready",
     "export_id": 22322,
     "created_at": "2025-03-20T12:33:58Z"
 }`}
-</CodeBlock>
+    </CodeBlock>
+  </Step>
 
-## Скачивание готового архива
+  <Step title="Скачайте готовый архив">
+    Получив `JSON` с информацией о готовом экспорте, вам необходимо взять значение поля `export_id` и выполнить запрос на скачивание архива сообщений, указав его в `URL` запроса.
 
-Получив `JSON` с информацией о готовом экспорте, вам необходимо взять значение поля `export_id` и выполнить запрос на скачивание архива сообщений, указав его в `URL` запроса.
+    Для скачивания архива используйте метод [Скачать архив экспорта](GET /chats/exports/{id}).
+  </Step>
 
-Для скачивания архива используйте метод [Скачать архив экспорта](GET /chats/exports/{id}).
+  <Step title="Изучите структуру архива">
+    Архив представляет собой папки, где каждая папка соответствует чату в вашем пространстве. Название папки состоит из имени чата и его `ID`, например: `Design_12925828`. Внутри папки будут `JSON`-файлы, которые соответствуют дате переписки. Каждый день — отдельный файл.
 
-## Архив сообщений
+    Дополнительно, рядом с папками будет находиться список чатов, которые попали в экспорт. Список чатов представлен файлом `chats.json`. Список не создается, если при запросе экспорта было указано `skip_chats_file` как `true`.
 
-Архив представляет собой папки, где каждая папка соответствует чату в вашем пространстве. Название папки состоит из имени чата и его `ID`, например: `Design_12925828`. Внутри папки будут `JSON`-файлы, которые соответствуют дате переписки. Каждый день — отдельный файл.
+    <SchemaBlock name="ExportMessage" title="Структура данных в JSON-файлах сообщений" />
 
-Дополнительно, рядом с папками будет находиться список чатов, которые попали в экспорт. Список чатов представлен файлом `chats.json`. Список не создается, если при запросе экспорта было указано `skip_chats_file` как `true`.
+    Список в файле `chats.json` представляет собой массив объектов чатов. Структура каждого объекта чата описана ниже.
 
-<SchemaBlock name="ExportMessage" title="Структура данных в JSON-файлах сообщений" />
-
-Список в файле `chats.json` представляет собой массив объектов чатов. Структура каждого объекта чата описана ниже.
-
-<SchemaBlock name="ExportChat" title="Структура объекта чата в массиве файла chats.json" />
+    <SchemaBlock name="ExportChat" title="Структура объекта чата в массиве файла chats.json" />
+  </Step>
+</Steps>
