Feat/home layout improvements (#42)

--- a/apps/docs/content/guides/forms.mdx
+++ b/apps/docs/content/guides/forms.mdx
@@ -104,10 +104,10 @@ description: Представления с набором полей для по
 
 Для открытия представления используйте метод [Открытие представления](POST /views/open).
 
-<Warning>
+<Danger>
   С целью поддержания интерактивности и отзывчивости интерфейсов Пачки, срок жизни `trigger_id`
   ограничен и составляет **3 секунды**
-</Warning>
+</Danger>
 
 ## Получение результатов
 
@@ -161,10 +161,10 @@ description: Представления с набором полей для по
 
 Вам необходимо оперативно ответить на вебхук (кодом `200` или `400` со списком ошибок). В ином случае, пользователь получит ошибку отправки в интерфейсе Пачки. Все значения полей будут сохранены и **пользователь повторит попытку отправки формы**.
 
-<Warning>
+<Danger>
   С целью поддержания интерактивности и отзывчивости интерфейсов Пачки, время на ответ ограничего.
   Ваше приложение должно дать ответ на вебхук в течение **3 секунд**.
-</Warning>
+</Danger>
 
 ### Закрытие представления
 
