--- a/apps/docs/content/guides/webhook.mdx
+++ b/apps/docs/content/guides/webhook.mdx
@@ -88,18 +88,23 @@ content-length: 358
 
 </CodeBlock>
 
-Для проверки подписи необходимо вычислить её самостоятельно, используя секрет вебхука `Signing secret`, который доступен в настройках бота во вкладке «Исходящий webhook». Рекомендуется использовать сырой (raw) контент тела запроса для вычисления хеша, так как при JSON-парсинге содержимое может быть изменено.
+<Steps>
+  <Step title="Проверьте подпись">
+    Для проверки подписи необходимо вычислить её самостоятельно, используя секрет вебхука `Signing secret`, который доступен в настройках бота во вкладке «Исходящий webhook». Рекомендуется использовать сырой (raw) контент тела запроса для вычисления хеша, так как при JSON-парсинге содержимое может быть изменено.
 
-<CodeBlock language="javascript" title="Вычисление и сравнение подписи">
-{`// WEBHOOK_SECRET - значение поля Signing secret во вкладке «Исходящий webhook» в настройках бота
+    <CodeBlock language="javascript" title="Вычисление и сравнение подписи">
+    {`// WEBHOOK_SECRET - значение поля Signing secret во вкладке «Исходящий webhook» в настройках бота
 
 const signature = crypto.createHmac("sha256", WEBHOOK_SECRET).update(rawBody).digest("hex");
 if (signature !== request.headers['pachca-signature']) {
     throw "Invalid signature"
 }`}
+    </CodeBlock>
+  </Step>
 
-</CodeBlock>
+  <Step title="Валидируйте IP-адрес отправителя">
+    Кроме проверки подписи, также рекомендуется валидировать IP-адреса отправителя.
 
-Кроме проверки подписи, также рекомендуется валидировать IP-адреса отправителя.
-
-IP-адрес Пачки: `37.200.70.177`
+    IP-адрес Пачки: `37.200.70.177`
+  </Step>
+</Steps>
