--- a/apps/docs/content/home.mdx
+++ b/apps/docs/content/home.mdx
@@ -18,6 +18,14 @@ _Также вы можете получить markdown-версию любой 
 
 </Info>
 
+## Руководства
+
+<GuideCards />
+
+## Методы API
+
+<ApiCards />
+
 ## Боты
 
 Боты в Пачке являются основным способом создания автоматизаций. С помощью ботов вы можете использовать входящие и исходящие вебхуки, а также использовать API.
