feat: add Mermaid diagram support with interactive controls
Add comprehensive Mermaid diagram support to MDX content:
- Client-side rendering with dynamic import for optimization
- Automatic light/dark theme switching
- Interactive controls: zoom in/out (50% step), pan (drag), reset
- Smooth pinch-to-zoom (2% step) with Ctrl+scroll support
- Improved text readability with contrast stroke for alt/opt/loop labels
- Text selection disabled during diagram interaction

Update guides/forms.mdx with lifecycle diagram

--- a/apps/docs/content/guides/forms.mdx
+++ b/apps/docs/content/guides/forms.mdx
@@ -20,9 +20,39 @@ description: Представления с набором полей для по
 Всё начинается с нажатия пользователем `Data-кнопки` кнопки в сообщении.
 
 - В результате нажатия кнопки вашему приложению отправляется исходящий вебхук с уникальным `trigger_id`;
-- Затем приложение фомирует представление и отправляет его, а пользователю отображается модальное окно;
-- Далее пользователь заполняет поля и вашему приложению отправляется исходящий вебхук с данными заполненных пользователем полей в представлении;
-- В ответе на вебхук ваше приложение может отправить список ошибок, которые необходимо отобразить пользателю в представлении, или ответить кодом 200 (после чего модальное окно будет закрыто).
+- Затем [приложение формирует представление и отправляет его](#открытие-представления), а пользователю отображается модальное окно;
+- Далее пользователь [заполняет поля](#блоки-представления) и [вашему приложению отправляется исходящий вебхук](#получение-результатов) с данными заполненных пользователем полей в представлении;
+- В ответе на вебхук ваше приложение может [отправить список ошибок](#отображение-ошибок), которые необходимо отобразить пользователю в представлении, или ответить кодом 200 (после чего модальное окно будет [закрыто](#закрытие-представления)).
+
+<Mermaid
+  title="Жизненный цикл модального окна"
+  chart={`sequenceDiagram
+    participant User as Пользователь
+    participant Pachca as Пачка
+    participant Bot as Ваше приложение
+
+    Note over User: Нажатие Data-кнопки
+    User->>Pachca: Клик по кнопке
+    Pachca->>Bot: Webhook (button click)<br/>+ trigger_id
+    Note right of Bot: trigger_id действителен<br/>в течение 3 секунд
+    Note over Bot: Формирование<br/>представления
+    Bot->>Pachca: POST /views/open<br/>+ trigger_id + view
+    Pachca->>User: Открытие модального окна
+
+    Note over User: Заполнение полей
+    User->>Pachca: Отправка формы
+    Pachca->>Bot: Webhook (view_submission)<br/>+ данные полей
+    Note right of Bot: Ответ должен быть дан<br/>в течение 3 секунд
+
+    alt Данные валидны
+        Bot->>Pachca: HTTP 200 OK
+        Pachca->>User: Закрытие модального окна
+    else Есть ошибки валидации
+        Bot->>Pachca: HTTP 400 Bad Request<br/>+ список ошибок
+        Pachca->>User: Отображение ошибок
+        Note over User: Исправление<br/>и повторная отправка
+    end`}
+/>
 
 ## Блоки представления
 
@@ -166,17 +196,6 @@ description: Представления с набором полей для по
   Ваше приложение должно дать ответ на вебхук в течение **3 секунд**.
 </Warning>
 
-### Закрытие представления
-
-Если вы хотите просто закрыть пользователю представление (нет необходимости отображать ошибки), то ответ должен быть `HTTP 200 OK`. Никакое тело ответа не требуется.
-
-<CodeBlock language="http" title="Пример ответа на вебхук для закрытия представления">
-  {`HTTP/1.1 200 OK
-Server: nginx/1.14.2
-Date: Wed, 22 Apr 2025 12:32:29 GMT
-Content-Type: text/plain; charset=utf-8`}
-</CodeBlock>
-
 ### Отображение ошибок
 
 Если вы хотите отобразить пользователю ошибки заполнения конкретных полей представления, то ответ должен быть `HTTP 400 Bad Request`, а тело ответа содержать массив полей с указанием текста ошибки.
@@ -210,3 +229,14 @@ X-Rack-CORS: miss; no-origin
 </CodeBlock>
 
 <Image src="/images/forms/errors.png" alt="Пример отображения ошибок в интерфейсе представления" />
+
+### Закрытие представления
+
+Если вы хотите просто закрыть пользователю представление (нет необходимости отображать ошибки), то ответ должен быть `HTTP 200 OK`. Никакое тело ответа не требуется.
+
+<CodeBlock language="http" title="Пример ответа на вебхук для закрытия представления">
+  {`HTTP/1.1 200 OK
+Server: nginx/1.14.2
+Date: Wed, 22 Apr 2025 12:32:29 GMT
+Content-Type: text/plain; charset=utf-8`}
+</CodeBlock>
