feat: add Tree component, improve Mermaid diagrams and external links
- Add Tree/TreeFolder/TreeFile MDX components for file structure display
- Update Mermaid diagram node colors to match response block theme
- Improve Mermaid zoom to center on cursor/viewport instead of origin
- Add external link icon to auto-detected URLs in markdown
- Add Google RE2 syntax link in DlpRule schema
- Use Tree component in export guide for folder structure

--- a/apps/docs/content/guides/export.mdx
+++ b/apps/docs/content/guides/export.mdx
@@ -56,6 +56,24 @@ description: Экспорт данных пространства
 
     Дополнительно, рядом с папками будет находиться список чатов, которые попали в экспорт. Список чатов представлен файлом `chats.json`. Список не создается, если при запросе экспорта было указано `skip_chats_file` как `true`.
 
+    <Tree>
+      <TreeFolder name="Design_12925828" defaultOpen>
+        <TreeFile name="2025-01-15.json" />
+        <TreeFile name="2025-01-16.json" />
+        <TreeFile name="2025-01-17.json" />
+      </TreeFolder>
+      <TreeFolder name="Marketing_12925901" defaultOpen>
+        <TreeFile name="2025-01-15.json" />
+        <TreeFile name="2025-01-16.json" />
+      </TreeFolder>
+      <TreeFolder name="Development_12926012">
+        <TreeFile name="2025-01-15.json" />
+        <TreeFile name="2025-01-16.json" />
+        <TreeFile name="2025-01-17.json" />
+      </TreeFolder>
+      <TreeFile name="chats.json" />
+    </Tree>
+
     <SchemaBlock name="ExportMessage" title="Структура данных в JSON-файлах сообщений" />
 
     Список в файле `chats.json` представляет собой массив объектов чатов. Структура каждого объекта чата описана ниже.
