feat: add ImageCard component with lightbox zoom animation
Replace Image component with ImageCard across guides (dlp, forms).
ImageCard renders images in a styled card with optional caption/hint
and opens a lightbox with fly-in/fly-out animation on click.
Add mdx-expander rule to convert ImageCard to clean markdown.

--- a/apps/docs/content/guides/dlp.mdx
+++ b/apps/docs/content/guides/dlp.mdx
@@ -11,13 +11,13 @@ description: Политики предотвращения утечки данн
 
 Управление правилами DLP-системы доступно в разделе «Настройки пространства» → «DLP». Вы можете изменять список правил, а также включать и отключать их.
 
-<Image src="/images/dlp/dlp-page.png" alt="Список правил DLP-системы" />
+<ImageCard src="/images/dlp/dlp-page.png" alt="Список правил DLP-системы" caption="Список правил DLP-системы" />
 
 ## Создание правила
 
 Чтобы внести новое правило нажмите на кнопку «Создать новое правило», укажите название правила (чтобы было проще его потом изменить или удалить), его приоритет и `JSON` объект условия.
 
-<Image src="/images/dlp/new-rule.png" alt="Новое правило" maxWidth={500} />
+<ImageCard src="/images/dlp/new-rule.png" alt="Новое правило" caption="Создание нового правила" maxWidth={500} />
 
 Параметр «Приоритет» задает значение приоритета для политики, определяющее порядок её обработки. Меньшее целое число указывает на более высокий приоритет, значение 0 — на наивысший приоритет. Правила не могут иметь одинаковое значение приоритета.
 
