--- a/apps/docs/content/guides/forms.mdx
+++ b/apps/docs/content/guides/forms.mdx
@@ -13,7 +13,7 @@ description: Представления с набором полей для по
 
 Модальное окно состоит из стандартных элементов - заголовка, кнопки закрытия (отмены), набора полей (подзаголовки, текст, ввод текста, выбор, списки и тд.) и кнопки отправки.
 
-<Image src="/images/forms/modal-window.png" alt="Модальное окно" maxWidth={420} />
+<ImageCard src="/images/forms/modal-window.png" alt="Модальное окно" caption="Модальное окно" maxWidth={420} />
 
 ## Жизненный цикл модального окна
 
@@ -60,19 +60,19 @@ description: Представления с набором полей для по
 
 ### Заголовок (header)
 
-<Image src="/images/forms/header.png" alt="Заголовок" />
+<ImageCard src="/images/forms/header.png" alt="Заголовок" caption="Заголовок" />
 
 <SchemaBlock name="ViewBlockHeader" />
 
 ### Обычный текст (plain_text)
 
-<Image src="/images/forms/plaintext.png" alt="Обычный текст" />
+<ImageCard src="/images/forms/plaintext.png" alt="Обычный текст" caption="Обычный текст" />
 
 <SchemaBlock name="ViewBlockPlainText" />
 
 ### Форматированный текст (markdown)
 
-<Image src="/images/forms/markdown.png" alt="Форматированный текст" />
+<ImageCard src="/images/forms/markdown.png" alt="Форматированный текст" caption="Форматированный текст" />
 
 <SchemaBlock name="ViewBlockMarkdown" />
 
@@ -82,49 +82,49 @@ description: Представления с набором полей для по
 
 ### Разделитель (divider)
 
-<Image src="/images/forms/divider.png" alt="Разделитель" />
+<ImageCard src="/images/forms/divider.png" alt="Разделитель" caption="Разделитель" />
 
 <SchemaBlock name="ViewBlockDivider" />
 
 ### Текстовое поле (input)
 
-<Image src="/images/forms/input.png" alt="Текстовое поле" />
+<ImageCard src="/images/forms/input.png" alt="Текстовое поле" caption="Текстовое поле" />
 
 <SchemaBlock name="ViewBlockInput" />
 
 ### Выпадающий список (select)
 
-<Image src="/images/forms/select.png" alt="Выпадающий список" />
+<ImageCard src="/images/forms/select.png" alt="Выпадающий список" caption="Выпадающий список" />
 
 <SchemaBlock name="ViewBlockSelect" />
 
 ### Радиокнопки (radio)
 
-<Image src="/images/forms/radio.png" alt="Радиокнопки" />
+<ImageCard src="/images/forms/radio.png" alt="Радиокнопки" caption="Радиокнопки" />
 
 <SchemaBlock name="ViewBlockRadio" />
 
 ### Чекбоксы (checkbox)
 
-<Image src="/images/forms/checkbox.png" alt="Чекбоксы" />
+<ImageCard src="/images/forms/checkbox.png" alt="Чекбоксы" caption="Чекбоксы" />
 
 <SchemaBlock name="ViewBlockCheckbox" />
 
 ### Выбор даты (date)
 
-<Image src="/images/forms/date.png" alt="Выбор даты" />
+<ImageCard src="/images/forms/date.png" alt="Выбор даты" caption="Выбор даты" />
 
 <SchemaBlock name="ViewBlockDate" />
 
 ### Выбор времени (time)
 
-<Image src="/images/forms/time.png" alt="Выбор времени" />
+<ImageCard src="/images/forms/time.png" alt="Выбор времени" caption="Выбор времени" />
 
 <SchemaBlock name="ViewBlockTime" />
 
 ### Загрузка файлов (file_input)
 
-<Image src="/images/forms/file.png" alt="Загрузка файлов" />
+<ImageCard src="/images/forms/file.png" alt="Загрузка файлов" caption="Загрузка файлов" />
 
 <SchemaBlock name="ViewBlockFileInput" />
 
@@ -228,7 +228,7 @@ X-Rack-CORS: miss; no-origin
 
 </CodeBlock>
 
-<Image src="/images/forms/errors.png" alt="Пример отображения ошибок в интерфейсе представления" />
+<ImageCard src="/images/forms/errors.png" alt="Пример отображения ошибок в интерфейсе представления" caption="Пример отображения ошибок в интерфейсе представления" />
 
 ### Закрытие представления
 
