feat: add cursor pagination to all list endpoints
Replace page/per pagination with cursor/limit in documentation for:
group_tags, group_tags/{id}/users, messages, messages/{id}/read_member_ids,
messages/{id}/reactions, tasks. Update response examples with meta.paginate.

--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -9,6 +9,21 @@ useUpdatesComponent: true
 
 Новые методы в API и дополнения в уже существующих
 
+<!-- update:2026-02-16 -->
+
+## Курсорная пагинация
+
+Во все методы получения списков была добавлена поддержка курсорной пагинации. Теперь вы можете использовать параметры `cursor` и `limit` для постраничного получения данных. Прежние параметры `page` и `per` продолжают работать для обратной совместимости.
+
+Были обновлены следующие методы:
+
+- [Список тегов сотрудников](GET /group_tags)
+- [Список сотрудников тега](GET /group_tags/{id}/users)
+- [Список сообщений](GET /messages)
+- [Список прочитавших сообщение](GET /messages/{id}/read_member_ids)
+- [Список реакций на сообщение](GET /messages/{id}/reactions)
+- [Список напоминаний](GET /tasks)
+
 <!-- update:2026-02-12 -->
 
 ## Добавление участников в тред
