fix: update audit-events links to match renamed route

--- a/apps/docs/content/guides/audit-events.mdx
+++ b/apps/docs/content/guides/audit-events.mdx
@@ -9,7 +9,7 @@ description: Отслеживание событий безопасности
 
 `Audit events API` Пачки предоставляет командам безопасности доступ к логам о критически важных событиях в мессенджере. Это позволяет обеспечивать надежный мониторинг и соответствовать требованиям информационной безопасности и регуляторов.
 
-Для получения логов событий на основе указанных фильтров используйте метод [Журнал аудита событий](GET /audit-events).
+Для получения логов событий на основе указанных фильтров используйте метод [Журнал аудита событий](GET /audit_events).
 
 ## Реализованные типы событий
 
