--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -175,7 +175,7 @@ useUpdatesComponent: true
 
 Новый раздел включает следующие методы:
 
-- [Список событий аудита](GET /audit-events)
+- [Список событий аудита](GET /audit_events)
 
 Эти методы предоставляют возможность контролировать активность пользователей и системные изменения, что критически важно для обеспечения безопасности и соответствия требованиям.
 
