feat: add AuditEventKey enum to TypeSpec, render in docs via SchemaBlock
- Add AuditEventKey enum with 28 event types and x-enum-descriptions
- Replace event_key string type with AuditEventKey enum in AuditEvent model and query param
- Replace manual event list in audit-events.mdx with <SchemaBlock name="AuditEventKey" />

--- a/apps/docs/content/guides/audit-events.mdx
+++ b/apps/docs/content/guides/audit-events.mdx
@@ -13,46 +13,7 @@ description: Отслеживание событий безопасности
 
 ## Реализованные типы событий
 
-В текущей версии API реализованы следующие типы событий:
-
-### События аутентификации
-
-- `user_login` - пользователь успешно вошел в систему
-- `user_logout` - пользователь вышел из системы
-
-### События управления пользователями
-
-- `user_created` - создана новая учетная запись пользователя
-- `user_deleted` - учетная запись пользователя удалена
-- `user_role_changed` - роль пользователя была изменена
-- `user_updated` - данные пользователя обновлены
-
-### События управления тегами
-
-- `tag_created` - создан новый тег
-- `tag_deleted` - тег удален
-- `user_added_to_tag` - пользователь добавлен в тег
-- `user_removed_from_tag` - пользователь удален из тега
-
-### События управления чатами
-
-- `chat_created` - создан новый чат
-- `chat_renamed` - чат переименован
-- `chat_permission_changed` - изменены права доступа к чату
-- `user_chat_join` - пользователь присоединился к чату
-- `user_chat_leave` - пользователь покинул чат
-- `tag_added_to_chat` - тег добавлен в чат
-- `tag_removed_from_chat` - тег удален из чата
-
-### События сообщений
-
-- `message_updated` - сообщение отредактировано
-- `message_deleted` - сообщение удалено
-
-### События безопасности
-
-- `audit_events_accessed` - доступ к журналам аудита получен
-- `dlp_violation_detected` - срабатывание правила [DLP-системы](/guides/dlp)
+<SchemaBlock name="AuditEventKey" hideHeader />
 
 ## Примеры использования
 
