docs: add new audit event types to updates page

--- a/apps/docs/content/guides/updates.mdx
+++ b/apps/docs/content/guides/updates.mdx
@@ -9,6 +9,26 @@ useUpdatesComponent: true
 
 Новые методы в API и дополнения в уже существующих
 
+<!-- update:2026-02-19 -->
+
+## Новые типы аудит-событий
+
+В журнал аудита событий были добавлены новые типы событий:
+
+- `user_2fa_fail` — неудачная попытка двухфакторной аутентификации
+- `user_2fa_success` — успешная двухфакторная аутентификация
+- `access_token_created` — создан новый токен доступа
+- `access_token_updated` — токен доступа обновлен
+- `access_token_destroy` — токен доступа удален
+- `kms_encrypt` — данные зашифрованы
+- `kms_decrypt` — данные расшифрованы
+
+Полный список типов событий доступен на странице [Журнал аудита событий](/guides/audit-events).
+
+Был обновлен следующий метод:
+
+- [Журнал аудита событий](GET /audit_events)
+
 <!-- update:2026-02-16 -->
 
 ## Курсорная пагинация
